<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:id="@+id/clothes_list_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/list_title_margin_top"
        android:text="T-shirts"
        android:textAppearance="@style/TextAppearanceMainVisionNlp" />

    <com.hse.style.ListCardView
        android:id="@+id/clothes_item_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/list_content_margin"
        android:elevation="1dp"
        app:descriptionRes="@string/selection_item1_description"
        app:imageRes="@drawable/tshirt1"
        app:titleRes="@string/selection_item1_title" />

    <com.hse.style.ListCardView
        android:id="@+id/clothes_item_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/list_content_margin"
        android:elevation="1dp"
        app:descriptionRes="@string/selection_item2_description"
        app:imageRes="@drawable/tshirt2"
        app:titleRes="@string/selection_item2_title" />

    <com.hse.style.ListCardView
        android:id="@+id/clothes_item_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/list_content_margin"
        android:elevation="1dp"
        app:descriptionRes="@string/selection_item3_description"
        app:imageRes="@drawable/tshirt3"
        app:titleRes="@string/selection_item3_title"
        app:isLarge="true" />
</LinearLayout>